remove wordwrap bug

--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ body{
     margin-inline: 15px;
     padding-inline: 15px;
     align-items: center;
-    padding: 10px;
+    padding: 7px;
 }
 
 .todo-div .btn{
